--- a/autosave paginas/cadastroEmpresa2.html
+++ b/autosave paginas/cadastroEmpresa2.html
@@ -126,19 +126,23 @@
                 </div>
                 <div class="container mt-4">
                     <label class="form-label d-flex align-items-center justify-content-center">Selecione as opções que são necessarias: </label>
-                    <div class="d-flex align-items-center justify-content-center" data-toggle="buttons">
-                        <label class="btn btn-outline-primary botao-opcao">
-                            <input type="checkbox" autocomplete="off"> LONA
+                    <div class="d-flex align-items-center justify-content-center flex-column gap-3 gap-md-0" data-toggle="buttons">
+                        <div>
+                        <label style="width: 170px;" class="btn btn-outline-success botao-opcao" data-bs-toggle="button">
+                            <input id="opcao" value="lona" type="checkbox" class="btn-check" autocomplete="off"> LONA
                         </label>
-                        <label class="btn btn-outline-primary botao-opcao">
-                            <input type="checkbox" autocomplete="off"> PEDAGIO
+                        <label style="width: 170px;" class="btn btn-outline-success botao-opcao" data-bs-toggle="button">
+                            <input id="opcao" value="pedagio" type="checkbox" class="btn-check" autocomplete="off"> PEDAGIO
                         </label>
-                        <label class="btn btn-outline-primary botao-opcao">
-                            <input type="checkbox" autocomplete="off"> RASTREADOR
+                    </div>
+                        <div>
+                        <label style="width: 170px;" class="btn btn-outline-success botao-opcao" data-bs-toggle="button">
+                            <input id="opcao" value="rastreador" type="checkbox" class="btn-check" autocomplete="off"> RASTREADOR
                         </label>
-                        <label class="btn btn-outline-primary botao-opcao">
-                            <input type="checkbox" autocomplete="off"> AGENCIAMENTO
+                        <label style="width: 170px;" class="btn btn-outline-success botao-opcao" data-bs-toggle="button">
+                            <input id="opcao" value="agenciamento" type="checkbox" class="btn-check" autocomplete="off"> AGENCIAMENTO
                         </label>
+                    </div>
                     </div>
                 </div>
                 
@@ -177,9 +181,6 @@
                             <option value="transferencia">Transferência Bancária</option>
                             <option value="dinheiro">Dinheiro</option>
                         </select>
-                        <div class="input-group-append">
-                            <span class="input-group-text"><i class="bi bi-caret-down-fill"></i></span>
-                        </div>
                     </div>
                 </div>
                 
