--- a/autosave paginas/Página Fretes/index.html
+++ b/autosave paginas/Página Fretes/index.html
@@ -13,10 +13,18 @@
 <body>
 
     <div class="container-fluid h-100 p-0 d-flex">
-        <aside id="menu-lateral" style="background-color: #2D3F57; border-right-width: 10px; border-right-color: #FF7A00; border-right-style: solid;" class="w-25 h-auto">
-        </aside>
+        <div id="menu-lateral" style="background-color: #2D3F57;border-right-width: 10px; border-right-color: #FF7A00; border-right-style: solid;" class="w-25 h-100">
+            <h3 class="text-center text-white mt-5">Mooby Fretes</h3>
+            <div style="height: 170px;"></div>
+            <p class="text-white text-center fs-5 mb-5 fw-light">Procurar por Cargas.</p>
+            <div style="padding-left: 19%;" class=" text-white fs-5 fw-light">
+                <p class="mb-4">Fretes</p>
+                <p class="m-0 mb-1"><a class="link-light link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover" href="">•Aceitas</a></p>
+                <p class="m-0"><a class="link-light link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover" href="">•Minhas Cargas</a></p>
+            </div>
+        </div>
 
-        <div class="p-0 m-0 container-fluid">
+        <main style="height: 100vh;" class="p-0 m-0 container-fluid">
             <nav style="background-color: #E1E1F7;" class="navbar navbar-expand-sm navbar-light">
                 <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse"
                     data-bs-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
@@ -95,7 +103,6 @@
 
 
                 <div id="cards" style="height: 700px;overflow-y: scroll;" class="container p-1 m-0">
-
                     <div style="background-color: #E1E1F7;" class="card mb-3 p-3">
                         <div class="card-body d-flex justify-content-between flex-sm-row flex-column">
                             <div class="card-imagem">
@@ -288,7 +295,7 @@
                 </div>
             </div>
 
-        </div>
+        </main>
 
 
     </div>
