--- a/autosave paginas/Página Fretes/index.html
+++ b/autosave paginas/Página Fretes/index.html
@@ -13,7 +13,7 @@
 <body>
 
     <div class="container-fluid h-100 p-0 d-flex">
-        <div id="menu-lateral" style="background-color: #2D3F57;border-right-width: 10px; border-right-color: #FF7A00; border-right-style: solid;" class="w-25 h-100">
+        <div id="menu-lateral" style="background-color: #2D3F57;border-radius: 1%; border-right-width: 10px; border-right-color: #FF7A00; border-right-style: solid;" class="w-25 h-100">
             <h3 class="text-center text-white mt-5">Mooby Fretes</h3>
             <div style="height: 170px;"></div>
             <p class="text-white text-center fs-5 mb-5 fw-light">Procurar por Cargas.</p>
