--- a/autosave paginas/Página Fretes/index.html
+++ b/autosave paginas/Página Fretes/index.html
@@ -102,7 +102,7 @@
                 </div>
 
 
-                <div id="cards" style="height: 700px;overflow-y: scroll;" class="container p-1 m-0">
+                <div id="cards" style="height: 65vh;overflow-y: scroll;" class="container p-1 m-0">
                     <div style="background-color: #E1E1F7;" class="card mb-3 p-3">
                         <div class="card-body d-flex justify-content-between flex-sm-row flex-column">
                             <div class="card-imagem">
