--- a/autosave paginas/Página Fretes/index.html
+++ b/autosave paginas/Página Fretes/index.html
@@ -36,7 +36,7 @@
 
                     <div class="d-flex my-2 my-lg-0 ms-auto align-items-center">
                         <p class="m-0 fs-4 pe-2">Perfil</p>
-                        <img class="me-3" style="height: 60px; width: 60px;" src="perfil.png" alt="">
+                        <img class="me-3" style="height: auto;max-height: 60px;width: auto; max-width: 60px;" src="perfil.png" alt="">
                     </div>
 
                 </div>
