--- a/autosave paginas/Página Fretes/index.html
+++ b/autosave paginas/Página Fretes/index.html
@@ -34,7 +34,7 @@
 
                 <div class="collapse navbar-collapse" id="collapsibleNavId">
 
-                    <div class="d-flex my-2 my-lg-0 ms-auto align-items-center">
+                    <div class="d-flex ms-auto align-items-center">
                         <p class="m-0 fs-4 pe-2">Perfil</p>
                         <img class="me-3" style="height: auto;max-height: 60px;width: auto; max-width: 60px;" src="perfil.png" alt="">
                     </div>
@@ -102,7 +102,7 @@
                 </div>
 
 
-                <div id="cards" style="height: 65vh;overflow-y: scroll;" class="container p-1 m-0">
+                <div id="cards" style="height: 70vh;overflow-y: scroll;" class="container p-1 m-0">
                     <div style="background-color: #E1E1F7;" class="card mb-3 p-3">
                         <div class="card-body d-flex justify-content-between flex-sm-row flex-column">
                             <div class="card-imagem">
