--- a/autosave paginas/Página Fretes/index.html
+++ b/autosave paginas/Página Fretes/index.html
@@ -13,7 +13,7 @@
 <body>
 
     <div class="container-fluid h-100 p-0 d-flex">
-        <div id="menu-lateral" style="background-color: #2D3F57;border-radius: 1%; border-right-width: 10px; border-right-color: #FF7A00; border-right-style: solid;" class="w-25 h-100">
+        <div id="menu-lateral" style="background-color: #2D3F57;border-radius: 1%; border-right-width: 10px; border-right-color: #FF7A00; border-right-style: solid;" class="w-25 h-100 d-none d-md-block">
             <h3 class="text-center text-white mt-5">Mooby Fretes</h3>
             <div style="height: 170px;"></div>
             <p class="text-white text-center fs-5 mb-5 fw-light">Procurar por Cargas.</p>
@@ -26,9 +26,7 @@
 
         <main style="height: 100vh;" class="p-0 m-0 container-fluid">
             <nav style="background-color: #E1E1F7;" class="navbar navbar-expand-sm navbar-light">
-                <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
-                    aria-label="Toggle navigation">
+                <button class="navbar-toggler d-lg-none ms-2" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
