--- a/autosave paginas/Cadastro de Fretes/cadastrodefretes.html
+++ b/autosave paginas/Cadastro de Fretes/cadastrodefretes.html
@@ -1,29 +1,40 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro de Fretes</title>
     <link rel="stylesheet" href="../Cadastro de Fretes/style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
+
 <body>
 
     <div class="container-fluid h-100 p-0 d-flex">
-        <div id="menu-lateral" style="background-color: #2D3F57;border-radius: 1%; border-right-width: 10px; border-right-color: #FF7A00; border-right-style: solid;" class="w-25 h-100 d-none d-md-block">
+        <div id="menu-lateral"
+            style="background-color: #2D3F57;border-radius: 1%; border-right-width: 10px; border-right-color: #FF7A00; border-right-style: solid;"
+            class="w-25 h-100 d-none d-md-block">
             <h3 class="text-center text-white mt-5">Mooby Fretes</h3>
             <div style="height: 170px;"></div>
             <p class="text-white text-center fs-5 mb-5 fw-light">Procurar por Cargas.</p>
             <div style="padding-left: 19%;" class=" text-white fs-5 fw-light">
                 <p class="mb-4">Fretes</p>
-                <p class="m-0 mb-1"><a class="link-light link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover" href="">•Aceitas</a></p>
-                <p class="m-0"><a class="link-light link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover" href="">•Minhas Cargas</a></p>
+                <p class="m-0 mb-1"><a
+                        class="link-light link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover"
+                        href="">•Aceitas</a></p>
+                <p class="m-0"><a
+                        class="link-light link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover"
+                        href="">•Minhas Cargas</a></p>
             </div>
         </div>
 
         <main style="height: 100vh;" class="p-0 m-0 container-fluid">
             <nav style="background-color: #E1E1F7;" class="navbar navbar-expand-sm navbar-light">
-                <button class="navbar-toggler d-lg-none ms-2" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler d-lg-none ms-2" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
+                    aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
@@ -31,12 +42,64 @@
 
                     <div class="d-flex ms-auto align-items-center">
                         <p class="m-0 fs-4 pe-2">Perfil</p>
-                        <img class="me-3" style="height: auto;max-height: 60px;width: auto; max-width: 60px;" src="perfil.png" alt="">
+                        <img class="me-3" style="height: auto;max-height: 60px;width: auto; max-width: 60px;"
+                            src="perfil.png" alt="">
                     </div>
 
                 </div>
             </nav>
 
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>  
+            <div class="container text-center pt-5">
+                <h1><span class="cordamarca">Cadastrar</span> Fretes</h1>
+            </div>
+
+            <div class="container my-5">
+                <div class="row justify-content-center">
+                    <div class="col-md-4 col-lg-3 mb-4">
+                        <div class="card h-100">
+                            <div class="card-body d-flex flex-column justify-content-center align-items-center">
+                                <h1 class="text-primary mb-0" style="font-weight: bolder; font-size: 5rem;">15</h1>
+                                <span class="fw-bold fs-5">Fretes Cadastrados</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-8 col-lg-6 mb-4">
+                        <div class="card h-100">
+                            <div class="card-body d-flex flex-column justify-content-center align-items-center">
+                                <h1 class="text-primary mb-4" style="font-weight: bolder;">Meus Fretes Cadastrados</h1>
+                                <button class="btn btn-warning btn-lg col-9">Visualizar</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+            <!-- Outra modo de mostrar a pagina, ainda falta centralizar os elementos.
+            <div style="background-color: #E1E1F7; width: 88%; height: 200px; border-radius: 10px; margin-top: 50px; padding-right: 10px;" class=" px-3 mx-auto d-flex align-items-center gap-5">
+                <div style="background-color: #fff; width: calc(88% / 3); height: 80%; margin-left: 20px; margin-top: 50px; border-radius: 5px; line-height: 1.2;" class="my-auto d-flex flex-column justify-content-center align-items-center me-5">
+                    <span style="color: #0500FF; font-weight: bolder; font-size: 5rem;">15</span>
+                    <span style="font-weight: bolder; font-size: 1.5rem;" class="pb-3">Fretes Cadastrados</span>
+                </div>
+
+                <div class="d-flex flex-column justify-content-center align-items-center ms-5 ps-5">
+                    <h1>Meus Fretes Cadastrados</h1>
+                    <button class="btn btn-warning btn-lg col-9">Visualizar</button>
+                </div>
+            </div>
+            -->
+
+
+        </main>
+    </div>
+            
+    
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
