--- a/autosave paginas/Cadastro de Fretes/cadastrodefretes.html
+++ b/autosave paginas/Cadastro de Fretes/cadastrodefretes.html
@@ -31,7 +31,7 @@
         </div>
 
         <main style="height: 100vh;" class="p-0 m-0 container-fluid">
-            <nav style="background-color: #E1E1F7;" class="navbar navbar-expand-sm navbar-light">
+            <nav style="background-color: #E1E1F7;" class="navbar navbar-expand-sm navbar-light pe-2">
                 <button class="navbar-toggler d-lg-none ms-2" type="button" data-bs-toggle="collapse"
                     data-bs-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -40,10 +40,17 @@
 
                 <div class="collapse navbar-collapse" id="collapsibleNavId">
 
-                    <div class="d-flex ms-auto align-items-center">
+                    <div class="dropdown ms-auto">
+                        <button class="btn btn-outline-dark dropdown-toggle d-flex align-items-center" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                         <p class="m-0 fs-4 pe-2">Perfil</p>
                         <img class="me-3" style="height: auto;max-height: 60px;width: auto; max-width: 60px;"
                             src="perfil.png" alt="">
+                        </button>
+                        <ul class="dropdown-menu w-100">
+                            <li><a class="dropdown-item" href="#">Perfil</a></li>
+                            <li><a class="dropdown-item" href="#">Configurações</a></li>
+                            <li><a class="dropdown-item" href="#">Sair</a></li>
+                          </ul>
                     </div>
 
                 </div>
@@ -170,35 +177,11 @@
                                                 </div>
 
                                                 <div class="row mb-3">
+
                                                     <div class="col">
                                                         <input type="text" class="form-control"
                                                             placeholder="Tipos de Pagamento" aria-label="Last name">
                                                     </div>
-
-                                                    <div class="col">
-                                                        <input type="text" class="form-control"
-                                                            placeholder="Precisa de Lona" aria-label="Last name">
-                                                    </div>
-                                                </div>
-                                                <div class="row mb-3">
-                                                    <div class="col">
-                                                        <input type="text" class="form-control" placeholder="Pedagio"
-                                                            aria-label="Last name">
-                                                    </div>
-
-
-                                                    <div class="col">
-                                                        <input type="text" class="form-control"
-                                                            placeholder="Rastreanento" aria-label="Last name">
-                                                    </div>
-                                                </div>
-
-                                                <div class="row mb-3">
-                                                    <div class="col">
-                                                        <input type="text" class="form-control"
-                                                            placeholder="Agenciamento" aria-label="Last name">
-                                                    </div>
-
 
                                                     <div class="col">
                                                         <input type="text" class="form-control" placeholder="OBS"
