--- a/autosave paginas/Cadastro de Fretes/cadastrodefretes.html
+++ b/autosave paginas/Cadastro de Fretes/cadastrodefretes.html
@@ -15,7 +15,7 @@
     <div class="container-fluid h-100 p-0 d-flex">
         <div id="menu-lateral"
             style="background-color: #2D3F57;border-radius: 1%; border-right-width: 10px; border-right-color: #FF7A00; border-right-style: solid;"
-            class="w-25 h-100 d-none d-md-block">
+            class="w-25 h-100 d-none d-md-inline">
             <h3 class="text-center text-white mt-5">Mooby Fretes</h3>
             <div style="height: 170px;"></div>
             <p class="text-white text-center fs-5 mb-5 fw-light">Procurar por Cargas.</p>
@@ -41,7 +41,7 @@
                 <div class="collapse navbar-collapse" id="collapsibleNavId">
 
                     <div class="dropdown ms-auto">
-                        <button class="btn btn-outline-dark dropdown-toggle d-flex align-items-center" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <button class="botaoperfil btn btn-outline-dark dropdown-toggle d-flex align-items-center" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                         <p class="m-0 fs-4 pe-2">Perfil</p>
                         <img class="me-3" style="height: auto;max-height: 60px;width: auto; max-width: 60px;"
                             src="perfil.png" alt="">
