--- a/autosave paginas/Página Fretes/index.html
+++ b/autosave paginas/Página Fretes/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <div class="container-fluid h-100 p-0 d-flex">
-        <div id="menu-lateral" style="background-color: #2D3F57;border-radius: 1%; border-right-width: 10px; border-right-color: #FF7A00; border-right-style: solid;" class="w-25 h-100 d-none d-md-block">
+        <div id="menu-lateral" style="background-color: #2D3F57;border-radius: 1%; border-right-width: 10px; border-right-color: #FF7A00; border-right-style: solid;" class="w-25 h-100 d-none d-md-inline">
             <h3 class="text-center text-white mt-5">Mooby Fretes</h3>
             <div style="height: 170px;"></div>
             <p class="text-white text-center fs-5 mb-5 fw-light">Procurar por Cargas.</p>
@@ -24,22 +24,32 @@
         </div>
 
         <main style="height: 100vh;" class="p-0 m-0 container-fluid">
-            <nav style="background-color: #E1E1F7;" class="navbar navbar-expand-sm navbar-light">
-                <button class="navbar-toggler d-lg-none ms-2" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation">
+            <nav style="background-color: #E1E1F7;" class="navbar navbar-expand-sm navbar-light pe-2">
+                <button class="navbar-toggler d-lg-none ms-2" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
+                    aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
                 <div class="collapse navbar-collapse" id="collapsibleNavId">
 
-                    <div class="d-flex ms-auto align-items-center">
+                    <div class="dropdown ms-auto">
+                        <button class="botaoperfil btn btn-outline-dark dropdown-toggle d-flex align-items-center" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                         <p class="m-0 fs-4 pe-2">Perfil</p>
-                        <img class="me-3" style="height: auto;max-height: 60px;width: auto; max-width: 60px;" src="perfil.png" alt="">
+                        <img class="me-3" style="height: auto;max-height: 60px;width: auto; max-width: 60px;"
+                            src="perfil.png" alt="">
+                        </button>
+                        <ul class="dropdown-menu w-100">
+                            <li><a class="dropdown-item" href="#">Perfil</a></li>
+                            <li><a class="dropdown-item" href="#">Configurações</a></li>
+                            <li><a class="dropdown-item" href="#">Sair</a></li>
+                          </ul>
                     </div>
 
                 </div>
             </nav>
 
-            <div class="container mt-4">
+            <div class="container mt-3">
 
                 <div id="pesquisa">
                     <form class="d-flex col-12 mb-3">
@@ -99,13 +109,12 @@
                 </div>
 
 
-                <div id="cards" style="height: 70vh; overflow-y: scroll;" class="container p-1 m-0">
+                <div id="cards" style="height:auto ;max-height: 70vh; overflow-y: scroll;" class="container p-1 m-0">
                     <div style="background-color: #E1E1F7;" class="card mb-3 p-3">
                         <div class="card-body d-flex justify-content-between flex-sm-row flex-column">
                             <div class="card-imagem">
                                 <img src="image 2.png" class="img-fluid rounded-start" alt="Imagem de empresa">
-                                <p class="card-text text-center"><small class="text-body-secondary">Last update 3 mins
-                                        ago</small></p>
+                                <p class="card-text text-center"><small class="text-body-secondary">Last update 3 mins ago</small></p>
                             </div>
                             <div class="informacao-1 text-center">
                                 <p class="card-text">📌 Campinas - SP</p>
