--- a/autosave paginas/cadastroCaminhoneiro2.html
+++ b/autosave paginas/cadastroCaminhoneiro2.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <div class="text-center container mt-5">
-        <h1 style="font-family: 'Montserrat', sans-serif;"><span style="color:#FF7A00;">Auto</span> Save</h1>
+        <h1 style="font-family: 'Montserrat', sans-serif;"><span style="color:#FF7A00;">Mooby</span>Fretes</h1>
         <p>Ótimo, falta pouco....<br>
         você esta prestes a começar a ganhar até 5x mais com o Auto Save</p>
     </div>
@@ -29,13 +29,14 @@
                 <div class="esquerdo">
                     <form id="myForm" onsubmit="return validarFormulario()">
                         <div class="mb-3">
-                            <label for="inputPassword" class="form-label">Nome completo</label>
-                            <input id="nome" style="background-color: #D9D9D9; width: 100%;" placeholder="Carlos Pereira" type="text" class="form-control"  required>
+                            <label for="inputPassword" class="form-label">Placa do veiculo</label>
+                            <input name="Placa" style="background-color: #D9D9D9; width: 100%;" placeholder="Carlos Pereira" type="text" class="form-control"  required>
                             
                         </div>
                         <div class="mb-3">
-                            <label for="inputPassword" class="form-label">Email</label>
-                            <input id="email" style="background-color: #D9D9D9; width: 100%;" placeholder="autosavefretes@gmail.com" type="text" class="form-control"required >
+                            <label for="inputPassword" class="form-label">BiTrem</label>
+                            <input name="BiTrem" style="background-color: #D9D9D9; width: 100%;" type="button" class="form-control" value="Sim">
+                            <input name="BiTrem" style="background-color: #D9D9D9; width: 100%;" type="button" class="form-control" value="Não">
                         </div>
                         
                     </form>
@@ -48,16 +49,16 @@
                 <div class="esquerdo">
                     <form>
                         <div class="mb-3">
-                            <label for="inputPassword" class="form-label">Senha</label>
-                            <input id="senha" style="background-color: #D9D9D9; width: 100%;" placeholder="**********" type="text" class="form-control" >
+                            <label for="inputPassword" class="form-label">Carroceria</label>
+                            <input name="Carroceria" style="background-color: #D9D9D9; width: 100%;" placeholder="Grade baixa/Grade Alta/Caçamba..." type="text" class="form-control" >
                         </div>
                     </form>
                 </div>
                 <div class="esquerdo">
                     <form>
                         <div class="mb-3">
-                            <label for="inputPassword" class="form-label">CPF</label>
-                            <input style="background-color: #D9D9D9; width: 100%;" placeholder="123.456.789-12" type="text" class="form-control" >
+                            <label for="inputPassword" class="form-label">Veiculo</label>
+                            <input name="Veiculo" style="background-color: #D9D9D9; width: 100%;" type="text" class="form-control" >
                         </div>
                     </form>
                 </div>
@@ -73,32 +74,33 @@
                 <div class="direito">
                     <form>
                         <div class="mb-3">
-                            <label for="inputPassword" class="form-label">Cidade Residencial</label>
-                            <input style="background-color: #D9D9D9;" placeholder="Matão - SP" type="text" class="form-control" >
+                            <label for="inputPassword" class="form-label">Tipo RNTRC</label>
+                            <input name="TipoRNTRC"style="background-color: #D9D9D9;"  type="text" class="form-control" >
                         </div>
                     </form>
                 </div>
                 <div class="direito">
                     <form>
                         <div class="mb-3">
-                            <label for="inputPassword" class="form-label">Num CNH</label>
-                            <input style="background-color: #D9D9D9;" placeholder="" type="text" class="form-control" >
+                            <label for="inputPassword" class="form-label">Num RNTRC</label>
+                            <input name="NumRNTRC"style="background-color: #D9D9D9;" type="text" class="form-control" >
                         </div>
                     </form>
                 </div>
                 <div class="direito">
                     <form>
                         <div class="mb-3">
-                            <label for="inputPassword" class="form-label">Categoria CNH</label>
-                            <input style="background-color: #D9D9D9;" placeholder="" type="text" class="form-control" >
+                            <label for="inputPassword" class="form-label">Possui Rastreador</label>
+                            <input name="Rastreador" style="background-color: #D9D9D9; width: 100%;" type="button" class="form-control" value="Sim">
+                            <input name="Rastreador" style="background-color: #D9D9D9; width: 100%;" type="button" class="form-control" value="Não">
                         </div>
                     </form>
                 </div>
                 <div class="direito">
                     <form>
                         <div class="mb-3">
-                            <label for="inputPassword" class="form-label">Cod CNH</label>
-                            <input style="background-color: #D9D9D9;" placeholder="" type="text" class="form-control">
+                            <label for="inputPassword" class="form-label">Nome do Rastreador</label>
+                            <input Name="NomeRastreador" style="background-color: #D9D9D9;" type="text" class="form-control">
                         </div>
                     </form>
                 </div>
