--- a/autosave paginas/cadastroCaminhoneiro2.html
+++ b/autosave paginas/cadastroCaminhoneiro2.html
@@ -29,15 +29,15 @@
                 <div class="esquerdo">
                     <form id="myForm" onsubmit="return validarFormulario()">
                         <div class="mb-3">
-                            <label for="inputPassword" class="form-label">Placa do veiculo</label>
+                            <label for="Placa" class="form-label">Placa do veiculo</label>
                             <input name="Placa" style="background-color: #D9D9D9; width: 100%;" placeholder="Carlos Pereira" type="text" class="form-control"  required>
                             
                         </div>
                         <div class="mb-3">
-                            <label for="inputPassword" class="form-label">BiTrem</label>
+                            <label for="Bitrem" class="form-label">BiTrem</label>
                             <input name="BiTrem" style="background-color: #D9D9D9; width: 100%;" type="button" class="form-control" value="Sim">
                             <input name="BiTrem" style="background-color: #D9D9D9; width: 100%;" type="button" class="form-control" value="Não">
-                        </div>
+                        </input>
                         
                     </form>
                 </div>
@@ -49,7 +49,7 @@
                 <div class="esquerdo">
                     <form>
                         <div class="mb-3">
-                            <label for="inputPassword" class="form-label">Carroceria</label>
+                            <label for="Carroceria" class="form-label">Carroceria</label>
                             <input name="Carroceria" style="background-color: #D9D9D9; width: 100%;" placeholder="Grade baixa/Grade Alta/Caçamba..." type="text" class="form-control" >
                         </div>
                     </form>
@@ -57,7 +57,7 @@
                 <div class="esquerdo">
                     <form>
                         <div class="mb-3">
-                            <label for="inputPassword" class="form-label">Veiculo</label>
+                            <label for="Veiculo" class="form-label">Veiculo</label>
                             <input name="Veiculo" style="background-color: #D9D9D9; width: 100%;" type="text" class="form-control" >
                         </div>
                     </form>
@@ -74,7 +74,7 @@
                 <div class="direito">
                     <form>
                         <div class="mb-3">
-                            <label for="inputPassword" class="form-label">Tipo RNTRC</label>
+                            <label for="RNTRC" class="form-label">Tipo RNTRC</label>
                             <input name="TipoRNTRC"style="background-color: #D9D9D9;"  type="text" class="form-control" >
                         </div>
                     </form>
@@ -82,7 +82,7 @@
                 <div class="direito">
                     <form>
                         <div class="mb-3">
-                            <label for="inputPassword" class="form-label">Num RNTRC</label>
+                            <label for="NumRNTRC" class="form-label">Num RNTRC</label>
                             <input name="NumRNTRC"style="background-color: #D9D9D9;" type="text" class="form-control" >
                         </div>
                     </form>
@@ -90,7 +90,7 @@
                 <div class="direito">
                     <form>
                         <div class="mb-3">
-                            <label for="inputPassword" class="form-label">Possui Rastreador</label>
+                            <label for="Rastreador" class="form-label">Possui Rastreador</label>
                             <input name="Rastreador" style="background-color: #D9D9D9; width: 100%;" type="button" class="form-control" value="Sim">
                             <input name="Rastreador" style="background-color: #D9D9D9; width: 100%;" type="button" class="form-control" value="Não">
                         </div>
