--- a/autosave paginas/Login/login.html
+++ b/autosave paginas/Login/login.html
@@ -44,8 +44,8 @@
                             <p class="m-0 fs-4">Cadastre-se</p>
                         </div>
                         <div class="d-flex justify-content-center mt-3 gap-5">
-                            <button style="width: 150px; background-color: #FF7A00;" type="submit" class="btn btn-primary border border-0 rounded-0 " href="../cadastroCaminhoneiro.html" disabled>Pessoa</button>
-                            <button style="width: 150px; background-color: #FF7A00;" type="submit" class="btn btn-primary border border-0 rounded-0 "disabled>Empresa</button>
+                            <button style="width: 150px; background-color: #FF7A00;" type="submit" class="btn btn-primary border border-0 rounded-0 " id="cadastroCaminhoneiro"disabled>Pessoa</button>
+                            <button style="width: 150px; background-color: #FF7A00;" type="submit" class="btn btn-primary border border-0 rounded-0 " id="cadastroEmpresa"disabled>Empresa</button>
                         </div>
                     </div>
                 </form>
